kedrogy/src/kedrogy/templates_k8s/prodigy-svc-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: prodigy-svc
spec:
  selector:
    app.kubernetes.io/name: prodigy
  ports:
    - name: prodigy
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prodigy-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: label.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prodigy-svc
                port:
                  number: 8080
